[package]
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"
name = "manning-lp-async-rust-project-1-m1"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
async-std = { version = "1.12.0", features = ["unstable", "tokio1", "attributes"] }
async-trait = "0.1.74"
chrono = { version = "0.4", features = ["serde"] }
clap = {version = "3.1.8", features = ["derive"]}
yahoo_finance_api = { version = "1.1" }
