[package]
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"
name = "manning-lp-async-rust-project-1-m2-solution"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["unstable", "attributes", "tokio1"] }
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive"] }
futures = "0.3"
time = { version = "0.3.30", features = ["formatting", "parsing", "macros"] }
time-macros = "0.2.15"
yahoo_finance_api = "2.1.0"
